{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 294,
  "lineage": "11744662-fc44-cd34-7b5b-52777a9706af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "obsidian_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e7f0b65c3c6412e",
            "arn": "arn:aws:ec2:us-east-1:385109576397:elastic-ip/eipalloc-08e7f0b65c3c6412e",
            "association_id": "eipassoc-032404a787a0531c5",
            "domain": "vpc",
            "id": "eipalloc-08e7f0b65c3c6412e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-015fbe630608c775d",
            "private_dns": "ip-10-20-1-174.ec2.internal",
            "private_ip": "10.20.1.174",
            "public_dns": "ec2-34-239-22-9.compute-1.amazonaws.com",
            "public_ip": "34.239.22.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "obsidian-nat-eip01"
            },
            "tags_all": {
              "Name": "obsidian-nat-eip01"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "obsidian_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:385109576397:instance/i-0328086179173e944",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "obsidian-instance-profile01",
            "id": "i-0328086179173e944",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e86d97112d68f949",
            "private_dns": "ip-10-20-11-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.11.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05cdf1c1eac14dc11",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0422b4f6e43270197",
            "tags": {
              "Name": "obsidian-ec201"
            },
            "tags_all": {
              "Name": "obsidian-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2dbad739409297c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.obsidian_instance_profile01",
            "aws_iam_role.obsidian_ec2_role01",
            "aws_security_group.obsidian_ec2_sg01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "obsidian_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0532be01f26a3de55",
            "arn": "arn:aws:ec2:us-east-1:385109576397:instance/i-0096f6695310eca60",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "obsidian-instance-profile01",
            "id": "i-0096f6695310eca60",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f6a5251c6618076",
            "private_dns": "ip-10-20-11-130.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.11.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0561c07e982139002",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0e2dbad739409297c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0422b4f6e43270197",
            "tags": {
              "Name": "obsidian-ec201-private-bonus-labs"
            },
            "tags_all": {
              "Name": "obsidian-ec201-private-bonus-labs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2dbad739409297c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.obsidian_instance_profile01",
            "aws_iam_role.obsidian_ec2_role01",
            "aws_security_group.obsidian_ec2_sg01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "obsidian_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:internet-gateway/igw-0a8fae8f68bfa5c1d",
            "id": "igw-0a8fae8f68bfa5c1d",
            "owner_id": "385109576397",
            "tags": {
              "Name": "obsidian-igw01"
            },
            "tags_all": {
              "Name": "obsidian-igw01"
            },
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "obsidian_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "obsidian-alb-logs-385109576397",
                "enabled": true,
                "prefix": "alb-access-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:385109576397:loadbalancer/app/obsidian-alb01/5915c660b3080d28",
            "arn_suffix": "app/obsidian-alb01/5915c660b3080d28",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "obsidian-alb01-1869401441.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:385109576397:loadbalancer/app/obsidian-alb01/5915c660b3080d28",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "obsidian-alb01",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0537391256b631c27"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07b0fab0183bb9b7b"
              },
              {
                "subnet_id": "subnet-0e77e651e1e686d0d"
              }
            ],
            "subnets": [
              "subnet-07b0fab0183bb9b7b",
              "subnet-0e77e651e1e686d0d"
            ],
            "tags": {
              "Name": "obsidian-alb01"
            },
            "tags_all": {
              "Name": "obsidian-alb01"
            },
            "vpc_id": "vpc-016039df102cf8ed5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_s3_bucket.obsidian_alb_logs_bucket01",
            "aws_security_group.obsidian_alb_sg01",
            "aws_security_group.obsidian_ec2_sg01",
            "aws_subnet.obsidian_public_subnets",
            "aws_vpc.obsidian_vpc01",
            "data.aws_caller_identity.obsidian_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "obsidian_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:385109576397:listener/app/obsidian-alb01/5915c660b3080d28/6abef27ee8057481",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:385109576397:listener/app/obsidian-alb01/5915c660b3080d28/6abef27ee8057481",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:385109576397:loadbalancer/app/obsidian-alb01/5915c660b3080d28",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.obsidian_alb01",
            "aws_s3_bucket.obsidian_alb_logs_bucket01",
            "aws_security_group.obsidian_alb_sg01",
            "aws_security_group.obsidian_ec2_sg01",
            "aws_subnet.obsidian_public_subnets",
            "aws_vpc.obsidian_vpc01",
            "data.aws_caller_identity.obsidian_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "obsidian_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:385109576397:listener/app/obsidian-alb01/5915c660b3080d28/9d050ca4757d0ce4",
            "certificate_arn": "arn:aws:acm:us-east-1:385109576397:certificate/3c2b6385-289d-4229-a366-63db1aca79e2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:385109576397:targetgroup/obsidian-tg01/2c75fa26ec5ad6ce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:385109576397:listener/app/obsidian-alb01/5915c660b3080d28/9d050ca4757d0ce4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:385109576397:loadbalancer/app/obsidian-alb01/5915c660b3080d28",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.obsidian_alb01",
            "aws_lb_target_group.obsidian_tg01",
            "aws_s3_bucket.obsidian_alb_logs_bucket01",
            "aws_security_group.obsidian_alb_sg01",
            "aws_security_group.obsidian_ec2_sg01",
            "aws_subnet.obsidian_public_subnets",
            "aws_vpc.obsidian_vpc01",
            "data.aws_acm_certificate.obsidian_existing_cert",
            "data.aws_caller_identity.obsidian_self01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "obsidian_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:385109576397:targetgroup/obsidian-tg01/2c75fa26ec5ad6ce",
            "arn_suffix": "targetgroup/obsidian-tg01/2c75fa26ec5ad6ce",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:385109576397:targetgroup/obsidian-tg01/2c75fa26ec5ad6ce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:385109576397:loadbalancer/app/obsidian-alb01/5915c660b3080d28"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "obsidian-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "obsidian-tg01"
            },
            "tags_all": {
              "Name": "obsidian-tg01"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "obsidian_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:385109576397:targetgroup/obsidian-tg01/2c75fa26ec5ad6ce-20260205061734262400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:385109576397:targetgroup/obsidian-tg01/2c75fa26ec5ad6ce",
            "target_id": "i-0328086179173e944"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.obsidian_instance_profile01",
            "aws_iam_role.obsidian_ec2_role01",
            "aws_instance.obsidian_ec201",
            "aws_lb_target_group.obsidian_tg01",
            "aws_security_group.obsidian_ec2_sg01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "obsidian_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e7f0b65c3c6412e",
            "association_id": "eipassoc-032404a787a0531c5",
            "connectivity_type": "public",
            "id": "nat-0ad56b48a552a82db",
            "network_interface_id": "eni-015fbe630608c775d",
            "private_ip": "10.20.1.174",
            "public_ip": "34.239.22.9",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e77e651e1e686d0d",
            "tags": {
              "Name": "obsidian-nat01"
            },
            "tags_all": {
              "Name": "obsidian-nat01"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.obsidian_nat_eip01",
            "aws_internet_gateway.obsidian_igw01",
            "aws_subnet.obsidian_public_subnets",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "obsidian_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0aa53c0abfeab19101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ad56b48a552a82db",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa53c0abfeab1910",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.obsidian_nat_eip01",
            "aws_internet_gateway.obsidian_igw01",
            "aws_nat_gateway.obsidian_nat01",
            "aws_route_table.obsidian_private_rt01",
            "aws_subnet.obsidian_public_subnets",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "obsidian_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a8fae8f68bfa5c1d",
            "id": "r-rtb-07e90516af8c219f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e90516af8c219f2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.obsidian_igw01",
            "aws_route_table.obsidian_public_rt01",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "obsidian_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:route-table/rtb-0aa53c0abfeab1910",
            "id": "rtb-0aa53c0abfeab1910",
            "owner_id": "385109576397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ad56b48a552a82db",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "obsidian-private-rt01"
            },
            "tags_all": {
              "Name": "obsidian-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "obsidian_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:route-table/rtb-07e90516af8c219f2",
            "id": "rtb-07e90516af8c219f2",
            "owner_id": "385109576397",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8fae8f68bfa5c1d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "obsidian-public-rt01"
            },
            "tags_all": {
              "Name": "obsidian-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "obsidian_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e248a9087e6c1fc3",
            "route_table_id": "rtb-0aa53c0abfeab1910",
            "subnet_id": "subnet-0422b4f6e43270197"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.obsidian_private_rt01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c23c13daabcb6327",
            "route_table_id": "rtb-0aa53c0abfeab1910",
            "subnet_id": "subnet-02edddcad7205de8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.obsidian_private_rt01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "obsidian_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020e7904da1d7641b",
            "route_table_id": "rtb-07e90516af8c219f2",
            "subnet_id": "subnet-0e77e651e1e686d0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.obsidian_public_rt01",
            "aws_subnet.obsidian_public_subnets",
            "aws_vpc.obsidian_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b29e88a38af56e9a",
            "route_table_id": "rtb-07e90516af8c219f2",
            "subnet_id": "subnet-07b0fab0183bb9b7b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.obsidian_public_rt01",
            "aws_subnet.obsidian_public_subnets",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "obsidian_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:security-group/sg-0537391256b631c27",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2dbad739409297c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0537391256b631c27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from the internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "obsidian-alb-sg01",
            "name_prefix": "",
            "owner_id": "385109576397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "obsidian-alb-sg01"
            },
            "tags_all": {
              "Name": "obsidian-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_ec2_sg01",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "obsidian_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:security-group/sg-0e2dbad739409297c",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2dbad739409297c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "73.191.193.93/32"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "obsidian-ec2-sg01",
            "name_prefix": "",
            "owner_id": "385109576397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "obsidian-ec2-sg01"
            },
            "tags_all": {
              "Name": "obsidian-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "obsidian_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:security-group/sg-079bad5a16f52dccf",
            "description": "RDS access from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079bad5a16f52dccf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2dbad739409297c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "obsidian-rds-sg01",
            "name_prefix": "",
            "owner_id": "385109576397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "obsidian-rds-sg01"
            },
            "tags_all": {
              "Name": "obsidian-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_ec2_sg01",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "obsidian_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:security-group/sg-03ccdcdc3efa89654",
            "description": "SG for VPC Interface Endpoints",
            "egress": [],
            "id": "sg-03ccdcdc3efa89654",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2dbad739409297c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "obsidian-vpce-sg01",
            "name_prefix": "",
            "owner_id": "385109576397",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "obsidian-vpce-sg01"
            },
            "tags_all": {
              "Name": "obsidian-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "obsidian_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-485722735",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e2dbad739409297c",
            "security_group_rule_id": "sgr-0b95f5f4c2aa1f9e5",
            "self": false,
            "source_security_group_id": "sg-0537391256b631c27",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_alb_sg01",
            "aws_security_group.obsidian_ec2_sg01",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "obsidian_vpce_sg_ingress_https_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1326087844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03ccdcdc3efa89654",
            "security_group_rule_id": "sgr-037b3d951a140f03f",
            "self": false,
            "source_security_group_id": "sg-0e2dbad739409297c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_ec2_sg01",
            "aws_security_group.obsidian_vpce_sg01",
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obsidian_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:subnet/subnet-0422b4f6e43270197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0422b4f6e43270197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385109576397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obsidian-private-subnet01"
            },
            "tags_all": {
              "Name": "obsidian-private-subnet01"
            },
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:subnet/subnet-02edddcad7205de8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02edddcad7205de8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "385109576397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obsidian-private-subnet02"
            },
            "tags_all": {
              "Name": "obsidian-private-subnet02"
            },
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "obsidian_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:subnet/subnet-0e77e651e1e686d0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e77e651e1e686d0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385109576397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obsidian-public-subnet01"
            },
            "tags_all": {
              "Name": "obsidian-public-subnet01"
            },
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:subnet/subnet-07b0fab0183bb9b7b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b0fab0183bb9b7b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "385109576397",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "obsidian-public-subnet02"
            },
            "tags_all": {
              "Name": "obsidian-public-subnet02"
            },
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "obsidian_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:vpc/vpc-016039df102cf8ed5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-089c4a846d36ab6a5",
            "default_route_table_id": "rtb-0cf3bbe4470f2b87d",
            "default_security_group_id": "sg-074a7a265da4dec8c",
            "dhcp_options_id": "dopt-023335e837ffe7ae6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-016039df102cf8ed5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf3bbe4470f2b87d",
            "owner_id": "385109576397",
            "tags": {
              "Name": "obsidian-vpc01"
            },
            "tags_all": {
              "Name": "obsidian-vpc01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "obsidian_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:vpc-endpoint/vpce-0c6caa577b067e147",
            "dns_entry": [
              {
                "dns_name": "vpce-0c6caa577b067e147-gay8zo4i.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c6caa577b067e147-gay8zo4i-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c6caa577b067e147-gay8zo4i-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08841113O3DYDF9MMM67"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c6caa577b067e147",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-056d4feca2647db6f",
              "eni-095a99923685927d3"
            ],
            "owner_id": "385109576397",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03ccdcdc3efa89654"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.138",
                "subnet_id": "subnet-0422b4f6e43270197"
              },
              {
                "ipv4": "10.20.12.187",
                "subnet_id": "subnet-02edddcad7205de8d"
              }
            ],
            "subnet_ids": [
              "subnet-02edddcad7205de8d",
              "subnet-0422b4f6e43270197"
            ],
            "tags": {
              "Name": "obsidian-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "obsidian-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_vpce_sg01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01",
            "data.aws_region.obsidian_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "obsidian_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:vpc-endpoint/vpce-0ac8cc2b09fa24b2b",
            "dns_entry": [
              {
                "dns_name": "vpce-0ac8cc2b09fa24b2b-ewz9javt.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ac8cc2b09fa24b2b-ewz9javt-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ac8cc2b09fa24b2b-ewz9javt-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0037969I392ZL3HG889"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z087830732MVIZNM29OL4"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ac8cc2b09fa24b2b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-007c4ce748fce481f",
              "eni-0be2d85c89e06401e"
            ],
            "owner_id": "385109576397",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03ccdcdc3efa89654"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.48",
                "subnet_id": "subnet-0422b4f6e43270197"
              },
              {
                "ipv4": "10.20.12.86",
                "subnet_id": "subnet-02edddcad7205de8d"
              }
            ],
            "subnet_ids": [
              "subnet-02edddcad7205de8d",
              "subnet-0422b4f6e43270197"
            ],
            "tags": {
              "Name": "obsidian-vpce-kms01"
            },
            "tags_all": {
              "Name": "obsidian-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_vpce_sg01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01",
            "data.aws_region.obsidian_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "obsidian_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:vpc-endpoint/vpce-03664207a51e69fa5",
            "dns_entry": [
              {
                "dns_name": "vpce-03664207a51e69fa5-nsphd228.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03664207a51e69fa5-nsphd228-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03664207a51e69fa5-nsphd228-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00373901I0RPTGJNX3OV"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z087666510JZO22D6LK7Y"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04052862ESNQNCFF3W7R"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04047021K51FUAL49RKM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03664207a51e69fa5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-016c4b25dfe10ca83",
              "eni-08fcb1324492445a2"
            ],
            "owner_id": "385109576397",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03ccdcdc3efa89654"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.77",
                "subnet_id": "subnet-0422b4f6e43270197"
              },
              {
                "ipv4": "10.20.12.93",
                "subnet_id": "subnet-02edddcad7205de8d"
              }
            ],
            "subnet_ids": [
              "subnet-02edddcad7205de8d",
              "subnet-0422b4f6e43270197"
            ],
            "tags": {
              "Name": "obsidian-vpce-logs01"
            },
            "tags_all": {
              "Name": "obsidian-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_vpce_sg01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01",
            "data.aws_region.obsidian_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "obsidian_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:vpc-endpoint/vpce-087c332454eb7a720",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-087c332454eb7a720",
            "ip_address_type": "ipv4",
            "owner_id": "385109576397",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "obsidian-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "obsidian-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.obsidian_vpc01",
            "data.aws_region.obsidian_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "obsidian_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:vpc-endpoint/vpce-09037425de229a8e7",
            "dns_entry": [
              {
                "dns_name": "vpce-09037425de229a8e7-l0gz6jz3.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09037425de229a8e7-l0gz6jz3-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-09037425de229a8e7-l0gz6jz3-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00392251Q0FXBRU80LAP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-09037425de229a8e7",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-040e08415cb3f8643",
              "eni-0c6044555990d1dfc"
            ],
            "owner_id": "385109576397",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03ccdcdc3efa89654"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.201",
                "subnet_id": "subnet-0422b4f6e43270197"
              },
              {
                "ipv4": "10.20.12.12",
                "subnet_id": "subnet-02edddcad7205de8d"
              }
            ],
            "subnet_ids": [
              "subnet-02edddcad7205de8d",
              "subnet-0422b4f6e43270197"
            ],
            "tags": {
              "Name": "obsidian-vpce-secrets01"
            },
            "tags_all": {
              "Name": "obsidian-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_vpce_sg01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01",
            "data.aws_region.obsidian_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "obsidian_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:vpc-endpoint/vpce-082338bd8a0d1556e",
            "dns_entry": [
              {
                "dns_name": "vpce-082338bd8a0d1556e-9ak9vker.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-082338bd8a0d1556e-9ak9vker-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-082338bd8a0d1556e-9ak9vker-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0061362A9P2DKESBCUV"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z00369552X2K1ZBQ2DUBU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-082338bd8a0d1556e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01c8bbed1e769f737",
              "eni-0fd245b352048d3f6"
            ],
            "owner_id": "385109576397",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03ccdcdc3efa89654"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.123",
                "subnet_id": "subnet-0422b4f6e43270197"
              },
              {
                "ipv4": "10.20.12.43",
                "subnet_id": "subnet-02edddcad7205de8d"
              }
            ],
            "subnet_ids": [
              "subnet-02edddcad7205de8d",
              "subnet-0422b4f6e43270197"
            ],
            "tags": {
              "Name": "obsidian-vpce-ssm01"
            },
            "tags_all": {
              "Name": "obsidian-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_vpce_sg01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01",
            "data.aws_region.obsidian_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "obsidian_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:385109576397:vpc-endpoint/vpce-025566b524c403a79",
            "dns_entry": [
              {
                "dns_name": "vpce-025566b524c403a79-3dcqlmlp.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-025566b524c403a79-3dcqlmlp-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-025566b524c403a79-3dcqlmlp-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08832562L0H69Q3OGNF1"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z03813913294SH23LHI2M"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-025566b524c403a79",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0c8042cdaa777e276",
              "eni-0d4d72acae5a478d7"
            ],
            "owner_id": "385109576397",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-03ccdcdc3efa89654"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.20.11.169",
                "subnet_id": "subnet-0422b4f6e43270197"
              },
              {
                "ipv4": "10.20.12.112",
                "subnet_id": "subnet-02edddcad7205de8d"
              }
            ],
            "subnet_ids": [
              "subnet-02edddcad7205de8d",
              "subnet-0422b4f6e43270197"
            ],
            "tags": {
              "Name": "obsidian-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "obsidian-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-016039df102cf8ed5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.obsidian_vpce_sg01",
            "aws_subnet.obsidian_private_subnets",
            "aws_vpc.obsidian_vpc01",
            "data.aws_region.obsidian_region01"
          ]
        }
      ]
    }
  ]
}